--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,3 +29,25 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+
+- task: PublishSymbols@1
+  displayName: 'Publish symbols path: '
+  inputs: 
+    SearchPattern: '**\bin\**\*.pdb'
+  continueOnError: true
+
+- task: CopyFiles@1
+  displayName: 'Copy Files to: $(build.artifactstagingdirectory)'
+  inputs: 
+    SourceFolder: '$(build.artifactstagingdirectory'
+    Contents: 
+     **\bin\$(BuildConfiguration)\**
+     src\*.testsettings
+    TargetFolder: '$(build.artifactstagingdirectory)'
+  condition: succeededOrfailed()
+
+- task: PublishBuildArtifacts@1
+  displayname: 'Publish Artifact: drop'
+  inputs: 
+    Pathtopublish: '$(build.artifactstagingdirectory)'
+  condition: succeededOrfailed()  
