--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,7 +40,7 @@ steps:
   displayName: 'Copy Files to: $(build.artifactstagingdirectory)'
   inputs: 
     SourceFolder: '$(build.artifactstagingdirectory'
-    Contents: 
+    Contents: |
      **\bin\$(BuildConfiguration)\**
      src\*.testsettings
     TargetFolder: '$(build.artifactstagingdirectory)'
@@ -50,4 +50,4 @@ steps:
   displayname: 'Publish Artifact: drop'
   inputs: 
     Pathtopublish: '$(build.artifactstagingdirectory)'
-  condition: succeededOrfailed()
+  condition: succeededOrfailed()  
