--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,21 +31,20 @@ steps:
     configuration: '$(buildConfiguration)'
 
 - task: PublishSymbols@1
-  displayName: 'Publish symbols path: '
   inputs: 
     SearchPattern: '**\bin\**\*.pdb'
   continueOnError: true
 
 - task: CopyFiles@1
-  displayName: 'Copy Files to: $(build.artifactstagingdirectory)'
   inputs: 
     SourceFolder: '$(build.artifactstagingdirectory'
     Contents: |
      **\bin\$(BuildConfiguration)\**
      src\*.testsettings
     TargetFolder: '$(build.artifactstagingdirectory)'
+  condition: succeededOrFailed()
 
 - task: PublishBuildArtifacts@1
-  displayname: 'Publish Artifact: drop'
   inputs: 
     Pathtopublish: '$(build.artifactstagingdirectory)'
+  condition: succeededOrFailed()
